DEV-411 [FIX] Ensures that long text in the Data list wraps correctly and that rows in edit mode maintain consistent width. (#56)

--- a/css/build.css
+++ b/css/build.css
@@ -16,6 +16,11 @@ fl-list-repeater .list-repeater-load-error {
 
 fl-list-repeater-row {
   position: relative;
+  word-break: break-word;
+  display: block;
+  white-space: normal;
+  overflow-wrap: break-word;
+  width: fit-content;
 }
 
 .mode-interact fl-list-repeater-row[data-view] {
@@ -30,6 +35,7 @@ fl-list-repeater-row {
   background-color: rgba(126, 126, 126, 0.2);
   pointer-events: none;
   opacity: 0.5;
+  width: 100%;
 }
 
 .mode-interact [draggable="true"] fl-list-repeater-row.disabled [draggable="true"],
